--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="en" data-theme="light">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="/logo.png" />
     <title>Hero Apps</title>
-
-    
-</head>
-<body>
-    
+  </head>
+  <body>
     <div id="root"></div>
-
-    <script type="module" src="/src/main.jsx"></script> 
-</body>
+    <script type="module" src="src/main.jsx"></script>
+  </body>
 </html>
